--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap');
 
-$bgColor:#131722;
-$lightBgColor:rgba(30, 41, 82, 0.1);
+$bgColor:#202124;
+
 $bgTransparent:rgba(36,186,239,.6) ;
 $fontColor:#fff;
 $borderColor:#a8a8a83d;
@@ -57,3 +57,6 @@ body{
         
     }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
